--- a/styleGuide.html
+++ b/styleGuide.html
@@ -116,8 +116,8 @@
                             <a href="index.html" class="nav-item nav-link">Home</a>
                             <a href="about.html" class="nav-item nav-link " >About</a>
                             <a href="groupDiary.html" class="nav-item nav-link ">Group Diary</a>
-                            <a href="Technical.html" class="nav-item nav-link ">Technical</a>
-                            <a href="StyleGuide.html" class="nav-item nav-link active ">StyleGuide</a>
+                            <a href="./Technical.html" class="nav-item nav-link ">Technical</a>
+                            <a href="./StyleGuide.html" class="nav-item nav-link active ">StyleGuide</a>
                             <a href="project.html" class="nav-item nav-link ">Project</a>
                             <a href="https://web-shop-53c71.web.app" class="nav-item nav-link ">Go Shopping</a>
 
