--- a/technical.html
+++ b/technical.html
@@ -70,8 +70,8 @@
                         <a href="index.html" class="nav-item nav-link">Home</a>
                         <a href="about.html" class="nav-item nav-link " >About</a>
                         <a href="groupDiary.html" class="nav-item nav-link ">Group Diary</a>
-                        <a href="Technical.html" class="nav-item nav-link active">Technical</a>
-                        <a href="StyleGuide.html" class="nav-item nav-link ">StyleGuide</a>
+                        <a href="./Technical.html" class="nav-item nav-link active">Technical</a>
+                        <a href="./styleGuide.html" class="nav-item nav-link ">StyleGuide</a>
                         <a href="project.html" class="nav-item nav-link ">Project</a>
                         <a href="https://web-shop-53c71.web.app" class="nav-item nav-link ">Go Shopping</a>
                         <!-- <a href="advisor.html" class="nav-item nav-link">Advisor</a>
